# Algorithm-Practice

./: .gitignore  README.md  makeArryaIncreasing.cc  mmap.c  tmp
Atcoder/agc38/: A.cc  B.cc  C.cc  test_using.cc
Menci/: NOI2002.cc
algorithm/KMP/: manacher.hpp  test_manacher.cc
algorithm/String/: inc.cc  kmp.hpp  manacher.hpp  min_present.hpp  rev.cc  suffix_array.hpp  test_kmp.cc  test_manacher.cc
cf/1159/: B.cc  C.cc  D  D.cc
cf/1167/: 2.cc  B.cc  C.cc  (+2 more)
data-struct/graph/: Makefile.am  configure.ac  configure.scan  graph_link.hpp  out  strongly_connected_component.hpp  test.c  test_scc.cc  test_topo.cc
data-struct/graph/Bellman-Ford/: Bellman-Ford.hpp
data-struct/graph/Dijstra/: dijkstra.hpp  test_digistra.cc
data-struct/graph/Floyd/: floyd.hpp
data-struct/graph/Hungary/: hungary.hpp
data-struct/graph/Kruskal/: kruskal.hpp
data-struct/graph/MinCycle/: min_cecle.hpp
data-struct/graph/Prim/: prim_heap.hpp  test_prim.cc
data-struct/graph/Scc/: Kscc.cc  Lca.hpp  Tarjan.hpp  strongly_connected_component.hpp
data-struct/graph/Topo/: top_sort.hpp
data-struct/graph/UF/: union_find.hpp
data-struct/graph/autom4te.cache/: output.0  requests  traces.0
data-struct/graph/src/: graph_link.hpp  prim.hpp  prim_heap.hpp
greedy/: P1003.cc  P1067.cc  cow.cc
hihocoder/: city.cc
kickstart/: A.cc  A1.cc  B.cc  C.cc  RightA.cc  t
luogu/: P1038.cc  P1038_dfs.cc  P1706.cc  in  test.cc  test_string_size.cc
poj/: 3468.cc  in
test_cast/: 1.in  1.out  Makefile  c.cc  dinner_plate_stacks.py  json_check.py  problem  t.cc  test.py  two_sum_testcase.py
(+175 files in other folders)
